--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           link for my linkedin profile.</a>
       </div>
       <div>
-          <img src="MyProfile.jpg" alt="This is a picture of me, don't worry I've had a haircut since this was taken!">
+        <img src="MyProfile.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="This is a picture of me, don't worry I've had a haircut since this was taken!" >
       </div>
 <footer>
   <p>In the making by Austin Hunter</p>
