--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 </head>
     <title>Austin W Hunter</title>
+    <script src="<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+  <div class="Container">
     <h1>Brief Overview</h1>
       <div>
           <p>This is a paragraph</p>
@@ -14,6 +16,7 @@
       <div>
         <img src="MyProfile.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="This is a picture of me, don't worry I've had a haircut since this was taken!" >
       </div>
+    </div>
 <footer>
   <p>In the making by Austin Hunter</p>
 </footer>
