--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
   <div class="Container">
     <h1>Brief Overview</h1>
-      <div>
+    <div id="left-column">
           <p>This is a paragraph</p>
           <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> This is a
           link for my linkedin profile.</a>
       </div>
-      <div>
+      <div id="right-column">
         <img src="MyProfile.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="This is a picture of me, don't worry I've had a haircut since this was taken!" >
       </div>
     </div>
