--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
 </head>
-    <title>Austin W Hunter</title>
+    <title style="font-family:courier;">Austin W Hunter</title>
       <meta name="viewport" content="width=device-width">
       <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js" integrity="sha384-feJI7QwhOS+hwpX2zkaeJQjeiwlhOP+SdQDqhgvvo1DsjtiSQByFdThsxO669S2D" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
       <style>
+      body {
+          font: 20px "Montserrat", sans-serif;
+          line-height: 1.8;
+          color: #f5f6f7;
+           }
 
-
+      p {font-size: 16px;}
+        .margin {margin-bottom: 45px;}
+          .bg-1 {
+           background-color: #3182bd; /* Green */
+           color: #ffffff;
+         }
       </style>
 </head>
 <body style="background-color:powderblue;">
