--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
 
       <style>
       body {
-          font: 20px "Montserrat", sans-serif;
-          line-height: 1.8;
-          color: #f5f6f7;
+          font: 20px "courier", sans-serif;
+          color: #ff6347;
            }
 
-      p {font-size: 16px;}
-        .margin {margin-bottom: 45px;}
-          .bg-1 {
-           background-color: #3182bd; /* Green */
-           color: #ffffff;
+      p {
+           font-size: 16px;
+           background-color: #SlateBlue; /* Green */
+           color: #ff6347;
          }
       </style>
 </head>
