--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
       p {
            font-size: 16px;
-           background-color: #SlateBlue; /* Green */
+           background-color: #SlateBlue;
            color: #ff6347;
          }
       </style>
 </head>
 <body style="background-color:powderblue;">
   <div class="Container">
-    <h1>Brief Overview</h1>
+    <h1>Austin Hunter</h1>
     <div id="left-column">
           <p>This is a paragraph</p>
           <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> This is a
