--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
       <style>
       body {
-          font: 20px "courier", sans-serif;
+          font: 20px "courier";
           color: #ff6347;
            }
 
@@ -21,12 +21,11 @@
       </style>
 </head>
 <body style="background-color:powderblue;">
-  <div class="Container">
-    <h1>Austin Hunter</h1>
+  <div class="Container text-center">
+    <h1 text-center>Austin Hunter</h1>
     <div id="left-column">
           <p>This is a paragraph</p>
-          <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> This is a
-          link for my linkedin profile.</a>
+          <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> Vist my linkedin profile.</a>
       </div>
       <div id="right-column">
         <img src="MyProfile.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="This is a picture of me, don't worry I've had a haircut since this was taken!" >
