--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body style="background-color:powderblue;">
   <div class="Container text-center">
-    <h1 text-center>Austin Hunter</h1>
+    <h1>Austin Hunter</h1>
     <div id="left-column">
           <p>This is a paragraph</p>
           <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> Vist my linkedin profile.</a>
@@ -32,7 +32,7 @@
       </div>
     </div>
 <footer>
-  <p>In the making by Austin Hunter</p>
+  <p text-center>In the making by Austin Hunter</p>
 </footer>
 
 <body>
