--- a/index.html
+++ b/index.html
@@ -12,27 +12,26 @@
           font: 20px "courier";
           color: #ff6347;
            }
-
-      p {
+        p {
            font-size: 16px;
            background-color: #SlateBlue;
            color: #ff6347;
-         }
+           }
       </style>
 </head>
 <body style="background-color:powderblue;">
   <div class="Container text-center">
     <h1>Austin Hunter</h1>
-    <div id="left-column">
+    <div>
           <p>This is a paragraph</p>
           <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> Vist my linkedin profile.</a>
       </div>
-      <div id="right-column">
+      <div>
         <img src="MyProfile.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="This is a picture of me, don't worry I've had a haircut since this was taken!" >
       </div>
     </div>
 <footer>
-  <p text-center>In the making by Austin Hunter</p>
+  <p "text-center"> In the making by Austin Hunter</p>
 </footer>
 
 <body>
