--- a/index.html
+++ b/index.html
@@ -24,14 +24,18 @@
     <h1>Austin Hunter</h1>
     <div>
           <p>This is a paragraph</p>
+          <button>
           <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> Vist my linkedin profile.</a>
+        </button>
       </div>
       <div>
         <img src="MyProfile.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="This is a picture of me, don't worry I've had a haircut since this was taken!" >
       </div>
     </div>
 <footer>
-  <p "text-center"> In the making by Austin Hunter</p>
+  <div class="text-center">
+    <p> In the making by Austin Hunter</p>
+  </div>
 </footer>
 
 <body>
