--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <div>
           <p>This is a paragraph</p>
           <button>
-          <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> Vist my linkedin profile.</a>
+          <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> Vist my linkedin profile.
+
+          </a>
         </button>
       </div>
       <div>
