--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <h1>Austin Hunter</h1>
     <div>
           <p>This is a paragraph</p>
-          <button>
-          <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> Vist my linkedin profile.
+          <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> Vist my linkedin profile.</a>
 
-          </a>
-        </button>
+          <button>
+            hi
+          </button>
       </div>
       <div>
         <img src="MyProfile.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="This is a picture of me, don't worry I've had a haircut since this was taken!" >
