--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
     <h1>Austin Hunter</h1>
     <div>
           <p>This is a paragraph</p>
-          <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> Vist my linkedin profile.</a>
-
-          <button>
-            hi
-          </button>
+          <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> Vist my linkedin profile here.</a>
       </div>
       <div>
         <img src="MyProfile.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="This is a picture of me, don't worry I've had a haircut since this was taken!" >
+        <img src="Resume.pdf" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="Check out my resume." >
+
       </div>
     </div>
 <footer>
