--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div>
         <img src="MyProfile.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="This is a picture of me, don't worry I've had a haircut since this was taken!" >
-        <img src="Resume.pdf" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="Check out my resume." >
+        <img src="Resume-1.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="Check out my resume." >
 
       </div>
     </div>
