--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 </head>
-    <title style="font-family:courier;">Austin W Hunter</title>
+    <title style="font-family:courier;">Austin Hunter</title>
       <meta name="viewport" content="width=device-width">
       <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js" integrity="sha384-feJI7QwhOS+hwpX2zkaeJQjeiwlhOP+SdQDqhgvvo1DsjtiSQByFdThsxO669S2D" crossorigin="anonymous"></script>
@@ -28,8 +28,9 @@
       </div>
       <div>
         <img src="MyProfile.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="This is a picture of me, don't worry I've had a haircut since this was taken!" >
-        <img src="Resume-1.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="Check out my resume." >
-
+      </div>
+      <div>
+            <img src="Resume-1.jpg" class="img-responsive" style="display:inline" width="350" height="450" alt="Check out my resume." >
       </div>
     </div>
 <footer>
