--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   <div class="Container text-center">
     <h1>Austin Hunter</h1>
     <div>
-          <p>This is a paragraph</p>
           <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> Vist my linkedin profile here.</a>
       </div>
       <div>
         <img src="MyProfile.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="This is a picture of me, don't worry I've had a haircut since this was taken!" >
       </div>
+      <p> Here's my current resume!
       <div>
-            <img src="Resume-1.jpg" class="img-responsive" style="display:inline" width="350" height="450" alt="Check out my resume." >
+            <img src="Resume-1.jpg" class="img-responsive" style="display:inline" width="350" height="450">
       </div>
     </div>
 <footer>
