--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div>
         <img src="MyProfile.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="This is a picture of me, don't worry I've had a haircut since this was taken!" >
       </div>
-      <p> Here's my current resume!
+      <h2> <br> <br> Here's my current resume!</h2>
       <div>
             <img src="Resume-1.jpg" class="img-responsive" style="display:inline" width="350" height="450">
       </div>
