--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <div>
         <img src="MyProfile.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="This is a picture of me, don't worry I've had a haircut since this was taken!" >
       </div>
-      <h2> <br> <br> Here's my current resume!</h2>
+      <h2 style="background-color:MediumSeaGreen;"> <br> <br> Here's my current resume!</h2>
       <div>
-            <img src="Resume-1.jpg" class="img-responsive" style="display:inline" width="350" height="450">
+            <img src="Resume-1.jpg" class="img-responsive" style="display:inline" width="450" height="550">
       </div>
     </div>
 <footer>
