--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 </head>
-    <title style="background-color:LightGray; font-family:courier;">Austin Hunter</title>
+    <title style="background-color:LightGray;">Austin Hunter</title>
       <meta name="viewport" content="width=device-width">
       <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js" integrity="sha384-feJI7QwhOS+hwpX2zkaeJQjeiwlhOP+SdQDqhgvvo1DsjtiSQByFdThsxO669S2D" crossorigin="anonymous"></script>
@@ -10,7 +10,7 @@
       <style>
       body {
           font: 20px "courier";
-          color: #ff6347;
+          color: #696969;
            }
         p {
            font-size: 16px;
