--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            }
         p {
            font-size: 16px;
-           background-color: #SlateBlue;
+           background-color: #DodgerBlue;
            color: #ff6347;
            }
       </style>
