--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            }
         p {
            font-size: 16px;
-           background-color:DodgerBlue;
+           background-color: #SlateBlue;
            color: #ff6347;
            }
       </style>
@@ -23,14 +23,14 @@
   <div class="Container text-center">
     <h1>Austin Hunter</h1>
     <div>
-          <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> Vist my linkedin profile here.</a>
+          <a href="https://www.linkedin.com/in/austin-hunter-182105b3/"> Vist my linkedin profile here</a>
       </div>
       <div>
         <img src="MyProfile.jpg" class="img-responsive img-square" style="display:inline" width="350" height="350" alt="This is a picture of me, don't worry I've had a haircut since this was taken!" >
       </div>
       <h2> <br> Here's my current resume!</h2>
       <div>
-            <img src="Resume-1.jpg" class="img-responsive" style="display:inline" width="450" height="550">
+            <img src="Resume-1.jpg" class="img-responsive" style="display:inline" width="550" height="650">
       </div>
     </div>
 <footer>
