--- a/Resume01.html
+++ b/Resume01.html
@@ -25,7 +25,7 @@ div.cls_007{font-family:Arial,serif;font-size:15.1px;color:rgb(255,255,255);font
 <body>
 <div style="position:absolute;left:50%;margin-left:-495px;top:0px;width:990px;height:1400px;border-style:outset;overflow:hidden">
 <div style="position:absolute;left:0px;top:0px">
-<img src="366aa9e4-1f5e-11e8-b174-0cc47a792c0a_id_366aa9e4-1f5e-11e8-b174-0cc47a792c0a_files/background1.jpg" width=990 height=1400></div>
+<img src="background1.jpg" width=990 height=1400></div>
 <div style="position:absolute;left:317.00px;top:23.00px" class="cls_003"><span class="cls_003">Objective</span></div>
 <div style="position:absolute;left:20.00px;top:12.00px" class="cls_002"><span class="cls_002">Austin</span></div>
 <div style="position:absolute;left:428.00px;top:66.00px" class="cls_008"><span class="cls_008">Obtain an internship opportunity that will allow me to utilize my problem solving</span></div>
@@ -101,9 +101,9 @@ div.cls_007{font-family:Arial,serif;font-size:15.1px;color:rgb(255,255,255);font
 <div style="position:absolute;left:428.00px;top:1198.00px" class="cls_008"><span class="cls_008">-Taught belay and lead classes</span></div>
 <div style="position:absolute;left:317.00px;top:1253.00px" class="cls_008"><span class="cls_008">2014-05</span></div>
 <div style="position:absolute;left:376.11px;top:1253.00px" class="cls_008"><span class="cls_008">-</span></div>
-<div style="position:absolute;left:428.00px;top:1250.00px" class="cls_009"><span class="cls_009">Recreational Leadership /eam</span></div>
+<div style="position:absolute;left:428.00px;top:1250.00px" class="cls_009"><span class="cls_009">Recreational Leadership Team</span></div>
 <div style="position:absolute;left:317.00px;top:1275.00px" class="cls_008"><span class="cls_008">2016-08</span></div>
-<div style="position:absolute;left:428.00px;top:1278.00px" class="cls_008"><span class="cls_008">El Dorado Hills Community Servi es Distri t</span></div>
+<div style="position:absolute;left:428.00px;top:1278.00px" class="cls_008"><span class="cls_008">El Dorado Hills Community Services District</span></div>
 <div style="position:absolute;left:428.00px;top:1300.00px" class="cls_008"><span class="cls_008">-Participated in the planning and implementation of summer camp programs</span></div>
 <div style="position:absolute;left:428.00px;top:1322.00px" class="cls_008"><span class="cls_008">-Lead group activities, curriculum, and outdoor activities</span></div>
 <div style="position:absolute;left:428.00px;top:1344.00px" class="cls_008"><span class="cls_008">-Supervised Junior Camp counselors.</span></div>
