--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
       <style>
       body {
           font: 20px "courier";
-          color: #696969;
-           }
-        p {
-           font-size: 16px;
-           background-color: #SlateBlue;
-           color: #ff6347;
+          color: #A9A9A9;
            }
   .navbar {
             margin-bottom: 0;
             border-radius: 0;
           }
     .bg-1 {
-           background-color: #3182bd; /* Green */
+           background-color: #3182bd;
+           color: #ffffff;
+          }
+    .bg-2 {
+           background-color: #3182bd;
            color: #ffffff;
           }
     footer {
@@ -42,12 +41,16 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#index.html">Portfolio</a>
+        <a class="navbar-brand" href="#index.html">Home</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-left">
           <li><a href="Resume01.html">Resume</a></li>
-          <li><a href="https://github.com/AustinWalkerHunter"></a></li>
+          <li><a href="https://github.com/AustinWalkerHunter">GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/austin-hunter-182105b3/">LinkedIn</a></li>
+          <li><a href="https://www.facebook.com/austin.hunterxvi">Social</a></li>
+          <li><a href="AboutMe.html">About Me</a></li>
+
         </ul>
     </div>
   </div>
@@ -56,7 +59,11 @@
     <div class="Container text-center">
       <h1>Austin Hunter</h1>
         <img src="MyProfile.jpg" class="img-responsive img-circle" style="display:inline" width="350" height="350">
+          <p> Welcome to my Personal Portfolio! <br><br></p>
     </div>
+  </div>
+
+
 </body>
 <footer>
   <div class="text-center">
