--- a/AboutMe.html
+++ b/AboutMe.html
@@ -81,7 +81,7 @@
     </div>
     <div class="col-sm-4">
       <p>Exploring the Mountains of Idaho</p>
-      <img src="Mountain.jpg" class="img-responsive" style="display:inline" width="350" height="350">
+      <img src="Mountain.JPG" class="img-responsive" style="display:inline" width="350" height="350">
         <p>Jump Creek Falls, ID</p>
         </div>
       </div>
