--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
           <li><a href="https://github.com/AustinWalkerHunter">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/austin-hunter-182105b3/">LinkedIn</a></li>
           <li><a href="https://www.facebook.com/austin.hunterxvi">Social</a></li>
-          <li><a href="AboutMe.html">About Me</a></li>
 
         </ul>
     </div>
@@ -62,6 +61,36 @@
           <p> Welcome to my Personal Portfolio! <br><br></p>
     </div>
   </div>
+  <div class="bg-2">
+    <div class="Container text-center">
+      <h1>About Me<br></h1>
+    </div>
+  </div>
+
+    <div class="container bg-2 text-center">
+      <p> I am currently a student at Boise State University pursuing a degree in Computer
+          Science! Since a young age I have enjoyed taking things apart to understanding how it works
+          which has lead me to my interest in computer programming. My dream is to find a job with a company
+          that matches my culture and passion for technology.
+      <h2> 3 Things I enjoy </h2>
+      <div class="row">
+      <div class="col-sm-4">
+        <p>Rock Climbing</p>
+        <img src="Rock.jpg" class="img-responsive" style=width="350" height="750">
+        <p>Black Cliffs, ID</p>
+      </div>
+      <div class="col-sm-4">
+        <p>Quiet Games of Chess</p>
+        <img src="Chess.gif" class="img-responsive" style=width="350" height="750">
+          <p>King's Gambit</p>
+      </div>
+      <div class="col-sm-4">
+        <p>Exploring the Mountains of Idaho</p>
+        <img src="Mountain.JPG" class="img-responsive" style="display:inline" width="350" height="350">
+          <p>Jump Creek Falls, ID</p>
+          </div>
+        </div>
+    </div>
 
 
 </body>
