--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-</head>
+<head>
     <title style="background-color:LightGray;">Austin Hunter</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -83,14 +83,14 @@
       <div class="container-fluid text-center">
         <h2 style="font-size:150%;">About Me<br></h2>
       </div>
-      <p> My name is Austin Hunter. I am currently a student at Boise State University pursuing a degree in Computer
-          Science! Since a young age I have enjoyed taking things apart to understanding how it works
-          which has lead me to my interest in computer programming. My dream is to find a job with a company
+      <p> My name is Austin Hunter. I'm a student at Boise State University pursuing a degree in Computer
+          Science! Since a young age I have enjoyed taking things apart to understand how they work, this is what
+           sparked my interest in computer programming. My dream is to find a job with a company
           that best matches my culture and passion for technology. <br> <br> </p>
       </div>
 
     <div class="container-fluid bg-3 text-center" margin: 0;>
-      <h3 style="font-size:150%;"> 3 Things I enjoy </h3>
+      <h3 style="font-size:150%;"> 3 Things I Enjoy </h3>
       <div class="row">
       <div class="col-sm-4">
         <p>Rock Climbing</p>
