--- a/Resume01.html
+++ b/Resume01.html
@@ -61,7 +61,7 @@ div.cls_007{font-family:Arial,serif;font-size:15.1px;color:rgb(255,255,255);font
 <div style="position:absolute;left:428.00px;top:474.00px" class="cls_008"><span class="cls_008">CS 121 - Computer Science I (Java)</span></div>
 <div style="position:absolute;left:20.00px;top:509.00px" class="cls_005"><span class="cls_005">Skills/Strengths</span></div>
 <div style="position:absolute;left:317.00px;top:513.00px" class="cls_003"><span class="cls_003">Notable Projects</span></div>
-<div style="position:absolute;left:20.00px;top:553.00px" class="cls_007"><span class="cls_007">Programming languages: Java, C</span></div>
+<div style="position:absolute;left:20.00px;top:553.00px" class="cls_007"><span class="cls_007">Programming languages: Java, C, HTML</span></div>
 <div style="position:absolute;left:428.00px;top:556.00px" class="cls_009"><span class="cls_009">Priority Queue Using a Max-Heap</span></div>
 <div style="position:absolute;left:20.00px;top:583.00px" class="cls_007"><span class="cls_007">Operating Systems: Windows (95, 98,</span></div>
 <div style="position:absolute;left:428.00px;top:584.00px" class="cls_008"><span class="cls_008">The program implemented a priority queue using a max-heap built from an</span></div>
