--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
           <li><a href="https://github.com/AustinWalkerHunter">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/austin-hunter-182105b3/">LinkedIn</a></li>
           <li><a href="https://www.facebook.com/austin.hunterxvi">Social</a></li>
+          <li><a href="Contact.html">Contact</a></li>
+
 
         </ul>
     </div>
