--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
         <h2 style="font-size:150%;">About Me<br></h2>
       </div>
       <p> My name is Austin Hunter. I'm a student at Boise State University pursuing a degree in Computer
-          Science! Since a young age I have enjoyed taking things apart to understand how they work, this is what
-           sparked my interest in computer programming. My dream is to find a job with a company
+          Science! My dream is to find a job with a company
           that best matches my culture and passion for technology. <br> <br> </p>
       </div>
 
