--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="container-fluid text-center">
         <h2 style="font-size:150%;">About Me<br></h2>
       </div>
-      <p> My name is Austin Hunter. I'm a student at Boise State University pursuing a degree in Computer
+      <p> My name is Austin Hunter. I'm a 3 year student at Boise State University pursuing a degree in Computer
           Science! My dream is to find a job with a company
           that best matches my culture and passion for technology. <br> <br> </p>
       </div>
