--- a/Resume01.html
+++ b/Resume01.html
@@ -106,7 +106,7 @@ div.cls_007{font-family:Arial,serif;font-size:15.1px;color:rgb(255,255,255);font
 <div style="position:absolute;left:428.00px;top:1278.00px" class="cls_008"><span class="cls_008">El Dorado Hills Community Services District</span></div>
 <div style="position:absolute;left:428.00px;top:1300.00px" class="cls_008"><span class="cls_008">-Participated in the planning and implementation of summer camp programs</span></div>
 <div style="position:absolute;left:428.00px;top:1322.00px" class="cls_008"><span class="cls_008">-Lead group activities, curriculum, and outdoor activities</span></div>
-<div style="position:absolute;left:428.00px;top:1344.00px" class="cls_008"><span class="cls_008">-Supervised Junior Camp counselors.</span></div>
+<div style="position:absolute;left:428.00px;top:1344.00px" class="cls_008"><span class="cls_008">-Supervised Junior Camp counselors</span></div>
 </div>
 
 </body>
