--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
       <p> My name is Austin Hunter. I'm a 3 year student at Boise State University pursuing a degree in Computer
           Science! My dream is to find a job with a company
-          that best matches my culture and passion for technology. <br> <br> </p>
+          that has a great culture and shares a passion for technology. <br> <br> </p>
       </div>
 
     <div class="container-fluid bg-3 text-center" margin: 0;>
