--- a/Resume01.html
+++ b/Resume01.html
@@ -52,12 +52,12 @@ div.cls_007{font-family:Arial,serif;font-size:15.1px;color:rgb(255,255,255);font
 <div style="position:absolute;left:428.00px;top:354.00px" class="cls_008"><span class="cls_008">CS 253 - Intro to Systems Programming (C)</span></div>
 <div style="position:absolute;left:20.00px;top:375.00px" class="cls_006"><span class="cls_006">E-mail</span></div>
 <div style="position:absolute;left:428.00px;top:384.00px" class="cls_008"><span class="cls_008">ECE 230 - Digital Systems</span></div>
-<div style="position:absolute;left:20.00px;top:397.00px" class="cls_007"><span class="cls_007"> </span><A HREF="mailto:Austinhunter@u.boisestate.edu">Austinhunter@u.boisestate.edu</A> </div>
+<div style="position:absolute;left:20.00px;top:397.00px" class="cls_007"><span class="cls_007"> </span><A HREF="mailto:Austinhunter@u.boisestate.edu" style="color:white">Austinhunter@u.boisestate.edu</A> </div>
 <div style="position:absolute;left:428.00px;top:414.00px" class="cls_008"><span class="cls_008">CS 230 - Ethical Issues in Computing</span></div>
 <div style="position:absolute;left:20.00px;top:427.00px" class="cls_006"><span class="cls_006">LinkedIn</span></div>
 <div style="position:absolute;left:428.00px;top:444.00px" class="cls_008"><span class="cls_008">CS 221 - Computer Science II (Java)</span></div>
-<div style="position:absolute;left:20.00px;top:449.00px" class="cls_007"><span class="cls_007"> </span><A HREF="https://www.linkedin.com/in/austin-hunter-182105b3/">https://www.linkedin.com/in/austin-</A> </div>
-<div style="position:absolute;left:20.00px;top:471.00px" class="cls_007"><span class="cls_007"> </span><A HREF="https://www.linkedin.com/in/austin-hunter-182105b3/">hunter-182105b3/</A> </div>
+<div style="position:absolute;left:20.00px;top:449.00px" class="cls_007"><span class="cls_007"> </span><A HREF="https://www.linkedin.com/in/austin-hunter-182105b3/" style="color:white">https://www.linkedin.com/in/austin-</A> </div>
+<div style="position:absolute;left:20.00px;top:471.00px" class="cls_007"><span class="cls_007"> </span><A HREF="https://www.linkedin.com/in/austin-hunter-182105b3/" style="color:white">hunter-182105b3/</A> </div>
 <div style="position:absolute;left:428.00px;top:474.00px" class="cls_008"><span class="cls_008">CS 121 - Computer Science I (Java)</span></div>
 <div style="position:absolute;left:20.00px;top:509.00px" class="cls_005"><span class="cls_005">Skills/Strengths</span></div>
 <div style="position:absolute;left:317.00px;top:513.00px" class="cls_003"><span class="cls_003">Notable Projects</span></div>
