--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <div class="bg-1">
     <div class="container-fluid text-center">
       <h1>Austin Hunter</h1>
-        <img src="MyProfile.jpg" class="img-responsive img-circle" style="display:inline" width="350" height="350">
+        <img src="Professional Head Shot.jpg" class="img-responsive img-circle" style="display:inline" width="350" height="350">
           <p> Welcome to my Personal Portfolio! <br><br></p>
     </div>
   </div>
