--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
       <div class="container-fluid text-center">
         <h2 style="font-size:150%;">About Me<br></h2>
       </div>
-      <p> My name is Austin Hunter. I'm a 3 year student at Boise State University pursuing a degree in Computer
+      <p> My name is Austin Hunter. I'm a 3rd year student at Boise State University pursuing a degree in Computer
           Science! My dream is to find a job with a company
-          that has a great culture and shares a passion for technology. <br> <br> </p>
+          that has a great culture and to share my passion for technology. <br> <br> </p>
       </div>
 
     <div class="container-fluid bg-3 text-center" margin: 0;>
