--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-left">
-          <li><a href="Resume01.html">Resume</a></li>
-          <li><a href="https://github.com/AustinWalkerHunter">GitHub</a></li>
-          <li><a href="https://www.linkedin.com/in/austin-hunter-182105b3/">LinkedIn</a></li>
-          <li><a href="https://www.facebook.com/austin.hunterxvi">Social</a></li>
-          <li><a href="Contact.html">Contact</a></li>
+          <li><a href="Resume01.html" target="_blank">Resume</a></li>
+          <li><a href="https://github.com/AustinWalkerHunter" target="_blank">GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/austin-hunter-182105b3/" target="_blank">LinkedIn</a></li>
+          <li><a href="https://www.facebook.com/austin.hunterxvi" target="_blank">Social</a></li>
+          <li><a href="./Contact.html" target="_blank">Contact</a></li>
 
 
         </ul>
@@ -76,7 +76,7 @@
   <div class="bg-1">
     <div class="container-fluid text-center">
       <h1>Austin Hunter</h1>
-        <img src="Professional Head Shot.jpg" class="img-responsive img-circle" style="display:inline" width="350" height="350">
+        <img src="MyProfile.jpg" class="img-responsive img-circle" style="display:inline" width="350" height="350">
           <p> Welcome to my Personal Portfolio! <br><br></p>
     </div>
   </div>
@@ -87,7 +87,7 @@
       </div>
       <p> My name is Austin Hunter. I'm a 3rd year student at Boise State University pursuing a degree in Computer
           Science! My dream is to find a job with a company
-          that has a great culture and to share my passion for technology. <br> <br> </p>
+          that has a great culture and share my passion for technology. <br> <br> </p>
       </div>
 
     <div class="container-fluid bg-3 text-center" margin: 0;>
