--- a/Contact.html
+++ b/Contact.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
+<head>
+  <title style="background-color:black;">Contact Austin Hunter</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="style.css" type="text/css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 <body style="background-color:#3182bd">
 
-<h2>Send e-mail to AustinHunter@u.boisestate.edu:</h2>
+      <h2>Send e-mail to AustinHunter@u.boisestate.edu</h2>
 
-<form action="mailto:Austinhunter@u.boisestate.edu" method="post" enctype="text/plain">
-Name:<br>
-<input type="text" name="name"><br>
-E-mail:<br>
-<input type="text" name="mail"><br>
-Comment:<br>
-<input type="text" name="comment" size="50"><br><br>
-<input type="submit" value="Send">
-<input type="reset" value="Reset">
-</form>
-
+      <form action="mailto:Austinhunter@u.boisestate.edu" method="post" enctype="text/plain">
+        First Name:<br>
+        <input type="text" ng-model="Firstname"/><br>
+        Last Name:<br>
+        <input type="text" ng-model="Lastname"/><br>
+        Company E-mail:<br>
+        <input type="text" ng-model="mail"><br>
+        Phone Number:<br>
+        <input type="text" ng-model="number"><br>
+        Comment:<br>
+        <input type="text" ng-model="comment" size="75"><br><br>
+        <input type="submit" value="Send">
+        <input type="reset" value="Reset"> <br><br>
+        {{Firstname}}
+        {{Lastname}} <br>
+        {{mail}}<br>
+        {{number}}<br>
+        {{comment}}
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+        </form>
 </body>
 </html>
