Changed file paths

--- a/src/Resume01.html
+++ b/src/Resume01.html
@@ -25,7 +25,7 @@ div.cls_009{font-family:Arial,serif;font-size:15.1px;color:rgb(255,254,255);font
 <body>
 <div style="position:absolute;left:50%;margin-left:-495px;top:0px;width:990px;height:1400px;border-style:outset;overflow:hidden">
 <div style="position:absolute;left:0px;top:0px">
-<img src="background1.jpg" width=990 height=1400></div>
+<img src="../Resources/background1.jpg" width=990 height=1400></div>
 <div style="position:absolute;left:317.00px;top:21.00px" class="cls_003"><span class="cls_003">Objective</span></div>
 <div style="position:absolute;left:20.00px;top:10.00px" class="cls_002"><span class="cls_002">Austin</span></div>
 <div style="position:absolute;left:428.00px;top:61.00px" class="cls_007"><span class="cls_007">Obtain an internship opportunity that will allow me to utilize my problem solving</span></div>
