--- a/src/index.html
+++ b/src/index.html
@@ -7,45 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <style>
-      body {
-          font: 20px "courier";
-          color: #A9A9A9;
-           }
-
-  .navbar {
-            margin-bottom: 0;
-            border-radius: 0;
-            font-size: 20px;
-            letter-spacing: 5px;
-          }
-    .bg-1 {
-           margin: 0;
-           background-color: #3182bd;
-           color: #ffffff;
-          }
-    .bg-2 {
-           margin: 0;
-           background-color: #696969;
-           color: #ffffff;
-          }
-    .bg-3 {
-           margin: 0;
-           background-color:  #333333;
-           color: #ffffff;
-          }
-      .bg-4 {
-           margin: 0;
-           background-color: #696969;
-           color: #ffffff;
-          }
-
-    footer {
-            background-color: #3182bd;
-            padding: 25px;
-            color: #ffffff;
-          }
-      </style>
+    <script src="/Styles/mainStyles.css"></script>
 </head>
 
 <body>
@@ -66,7 +28,8 @@
           <li><a href="https://github.com/AustinWalkerHunter" target="_blank">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/austin-hunter-182105b3/" target="_blank">LinkedIn</a></li>
           <li><a href="https://www.facebook.com/austin.hunterxvi" target="_blank">Social</a></li>
-          <li><a href="./Contact.html" target="_blank">Contact</a></li>
+          <li><a href="Contact.html" target="_blank">Contact</a></li>
+          <li><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Connections (Beta)</a></li>
 
 
         </ul>
@@ -76,7 +39,7 @@
   <div class="bg-1">
     <div class="container-fluid text-center">
       <h1>Austin Hunter</h1>
-        <img src="Professional_Head_Shot.jpg" class="img-responsive img-circle" style="display:inline" width="350" height="350">
+        <img src="../Resources/Professional_Head_Shot.jpg" class="img-responsive img-circle" style="display:inline" width="350" height="350">
           <p> Welcome to my Personal Portfolio! <br><br></p>
     </div>
   </div>
@@ -95,17 +58,17 @@
       <div class="row">
       <div class="col-sm-4">
         <p>Rock Climbing</p>
-        <img src="Rock.jpg"  style="width:400px;height:500px;">
+        <img src="../Resources/Rock.jpg" style="width:400px;height:500px;">
         <p>Black Cliffs, ID</p>
       </div>
       <div class="col-sm-4">
         <p>Quiet Games of Chess</p>
-        <img src="Chess.gif"  style="width:400px;height:500px;">
+        <img src="../Resources/Chess.gif" style="width:400px;height:500px;">
           <p>King's Gambit</p>
       </div>
       <div class="col-sm-4">
         <p>Exploring the Mountains of Idaho</p>
-        <img src="Mountain.JPG" style="width:400px;height:500px;">
+        <img src="../Resources/Mountain.JPG" style="width:400px;height:500px;">
           <p>Jump Creek Falls, ID</p>
           </div>
         </div>
