--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-left">
-          <li><a href="Resume01.html" target="_blank">Resume</a></li>
+          <li><a href="src/Resume01.html" target="_blank">Resume</a></li>
           <li><a href="https://github.com/AustinWalkerHunter" target="_blank">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/austin-hunter-182105b3/" target="_blank">LinkedIn</a></li>
           <li><a href="https://www.facebook.com/austin.hunterxvi" target="_blank">Social</a></li>
-          <li><a href="Contact.html" target="_blank">Contact</a></li>
+          <li><a href="src/Contact.html" target="_blank">Contact</a></li>
           <li><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Connections (Beta)</a></li>
 
 
@@ -39,7 +39,7 @@
   <div class="bg-1">
     <div class="container-fluid text-center">
       <h1>Austin Hunter</h1>
-        <img src="../Resources/Professional_Head_Shot.jpg" class="img-responsive img-circle" style="display:inline" width="350" height="350">
+        <img src="Resources/Professional_Head_Shot.jpg" class="img-responsive img-circle" style="display:inline" width="350" height="350">
           <p> Welcome to my Personal Portfolio! <br><br></p>
     </div>
   </div>
@@ -58,17 +58,17 @@
       <div class="row">
       <div class="col-sm-4">
         <p>Rock Climbing</p>
-        <img src="../Resources/Rock.jpg" style="width:400px;height:500px;">
+        <img src="Resources/Rock.jpg" style="width:400px;height:500px;">
         <p>Black Cliffs, ID</p>
       </div>
       <div class="col-sm-4">
         <p>Quiet Games of Chess</p>
-        <img src="../Resources/Chess.gif" style="width:400px;height:500px;">
+        <img src="Resources/Chess.gif" style="width:400px;height:500px;">
           <p>King's Gambit</p>
       </div>
       <div class="col-sm-4">
         <p>Exploring the Mountains of Idaho</p>
-        <img src="../Resources/Mountain.JPG" style="width:400px;height:500px;">
+        <img src="Resources/Mountain.JPG" style="width:400px;height:500px;">
           <p>Jump Creek Falls, ID</p>
           </div>
         </div>
